Camino only - Optimize performance on 'Clean up' for downloads window.  Patch by smorgan <stuart.morgan@alumni.case.edu> r=kreeger sr=pink b=355912